kustomize/overlays/scots-lab/apps/znuny/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: znuny-mariadb
  namespace: znuny
  labels:
    app: znuny-mariadb
spec:
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
      name: mysql
  selector:
    app: znuny-mariadb
